Practice with html

--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <style>
+            @import url('https://fonts.googleapis.com/css?family=Roboto');
+            </style>
 </head>
 <body>
-    <h1>contact page</h1>
+        <header>
+                <a href="./index.html">Home Page</a>
+                <a href="./contact.html">Contact Page</a>
+            </header>
+    <h1>Contact page</h1>
 </body>
 </html>
