--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <a href="./index.html">Home Page</a>
-        <a href="./contact.html">contact Page</a>
+        <a href="./contact.html">Contact Page</a>
     </header>
     <h1>OUR GREAT SITE</h1>
 </body>
